[package]
name = "kauth"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
android_utils = { path = "../android-utils" }
base64 = "0.13"
common = { path = "../../common" }
geckobridge = { path = "../../services/geckobridge" }
hawk = { git = "https://github.com/taskcluster/rust-hawk.git", rev = "c0760a0d78eca2695f77b16122fc21cc3dbfd195" }
log = "0.4"
nix = "0.19.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
settings_service = { path = "../../services/settings" }
thiserror = "1.0"
url = "2.1"
zip_utils = { git = "ssh://git@git.kaiostech.com/KaiOS/zip_utils.git", branch="master" }

[dev-dependencies]
env_logger = "0.8"
