[package]
name = "kota"
version = "0.1.0"
authors = ["Cliff Han(Xian) <cliff.han@kaiostech.com>"]
edition = "2018"
license = "KaiOS"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
derivative = "2.1"
hamster = { path = "../hamster" }
kus = { path = "../kus" }
parking_lot = "0.11"
sha-1 = "0.9"
nix = "0.19"

[dev-dependencies]
mockito = "0.23"
actix-web = "3.0"
actix-rt = "1.1"
actix-files = "0.3"
futures = "0.3"
rand = "0.7"
