[package]
name = "kus"
version = "0.1.0"
authors = ["Cliff Han(Xian) <cliff.han@kaiostech.com>"]
edition = "2018"
license = "KaiOS"
publish = false

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
env_logger = "0.7"
json = "0.11.15"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_urlencoded = "0.7"
sha-1 = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] } 
sxd-xpath = "0.4"
sxd-document = "0.3"
thiserror = "1.0"
toml = "0.4"
url = "2.1"

[dev-dependencies]
mockito = "0.23"
